# pybiblion

./: .gitignore  pyproject.toml
cfg/: safesession.py
demo/: lesson_101_demo.ipynb
pybiblion.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pybiblion/cfg/: config.py
pybiblion/retrievers/: metric_util.py  semantic_scholar_paper.py
pybiblion/tools/: gpt_util.py  pdf_util.py
tools/: dataset_api.py
