[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pybiblion"
version = "0.1.0"
description = "Academic paper intelligence toolkit"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "requests",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["."]
